Deluge 0.5.8.7 (xx March 2008)
  * UPnP fixes
  * Bandwidth limiter fix
  * DHT routing table fix
  * Fix keyboard scrolling of plugins

Deluge 0.5.8.6 (11 March 2008)
  * Fix fast-resume deletion on shutdown
  * Tweak saving of uploaded memory (more effective ratio)
  * Add torrents with .fastresume files before torrents that don't
  * Fix a UI hang (bug #72)

Deluge 0.5.8.5 (28 February 2008)
  * Fix force recheck
  * Auto scraping of tracker if it doesn't report number of peers on reply
  * Fix web seed proxy preference
  * Fix adding of duplicate torrents
  * Fix timers for saving fastresume and uploaded memory
  * Fix rechecking on start
  * UPnP fixes
  * Fix possible libtorrent crash in storage

Deluge 0.5.8.4 (14 February 2008)
  * Randomize encryption pad size to evade throttling
  * https support
  * Add "seed time" to preferences
  * Add switch torrent source to "Move Torrent" plugin
  * Fix alignment of torrent info
  * Fix possible hang with torrents with many pieces
  * Don't resave fast-resume for seeding torrents
  * Add logout to WebUI
  * Only draw the advanced progress bar if 'num_pieces' is greater than 0 - prevents crash

Deluge 0.5.8.3 (28 January 2008)
  * Fix remote exploit which could crash Deluge
  * Fix high cpu spikes
  * Fix torrent order between sessions
  * Fix loading of BlocklistImport plugin

Deluge 0.5.8.2 (24 January 2008)
  * Fix column width saving
  * Option to download new blocklist after certain number of days - Patch from Mark Stahler 
  * Fix ui-locking when tracker responded in non-utf8 encoding
  * Remove Extra Stats plugin
  * Prevent Scheduler plugin from setting an invalid 'max_active_torrents'

Deluge 0.5.8.1 (18 January 2008)
  * Catch various exceptions from possibly corrupted persistent.state
  * Use pieces wanted instead of total pieces to draw adv progress bar
  * Properly catch 'address already in use' error when trying to use a port that is in use
  * Attempt to fix issue where all the columns start very small